--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,8 +1,14 @@
+
+
+<app-player *ngFor="let player of game.players; let i = index;"
+[ngStyle]="{'top.px':100+( i*120)}"
+class="player-positon"></app-player>
+
 <div class="field">
     <div class="card-stack">
-        <img *ngFor="let c of [0,1,2,3,]; let i = index;" 
+        <img *ngFor="let c of [0,1,2,3]; let i = index"
         [ngStyle]="{'right.px':i * 5}"  
-        src="\assets\img\cards\card_cover.png">
+        src="\assets\img\cards\card_cover.png" >
 
         <img (click)="takeCard()" class="cursor" style="right: 25px;" 
         src="\assets\img\cards\card_cover.png">
@@ -10,9 +16,13 @@
         <img *ngFor="let card of game.playedCards" class="played-card" 
         src="/assets/img/cards/{{ card }}.png" >
 
-        <img (click)="takeCard()" *ngIf ="pickCardAnimation" class="pick-card  " style="right: 25px;" 
+        <img *ngIf ="pickCardAnimation" class="pick-card  " style="right: 25px;" 
         src="\assets\img\cards\{{ currentCard }}.png">
-      
 
     </div>
-</div>>
+
+</div>
+
+<button mat-fab color="primary" (click)="openDialog()" class="btn-add" >
+    <mat-icon>add</mat-icon>
+  </button>
