--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -52,3 +52,15 @@
         transform: scale(1.3) translateX(140px) translateY(-180px) rotate(-10deg);
     }
 }
+
+.player-positon{
+    position: absolute;
+    right: 0;
+   
+}
+
+.btn-add{
+    position: absolute;
+    right: 32px;
+    bottom: 32px;
+}
